--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "qboard",
-  "version": "1.0.0",
-  "description": "Describe qboard here",
-  "private": true,
+  "version": "0.1.0",
+  "description": "the whiteboard app i wish existed",
   "scripts": {
     "build": "nwb build-web-app",
     "clean": "nwb clean-app",
-    "start": "nwb serve-web-app --reload",
-    "test": "nwb test",
-    "test:coverage": "nwb test --coverage",
-    "test:watch": "nwb test --server"
+    "start": "nwb serve-web-app --reload"
   },
   "dependencies": {
+    "fabric": "^3.6.3"
   },
   "devDependencies": {
-    "nwb": "0.25.x"
+    "@types/fabric": "^3.6.7",
+    "awesome-typescript-loader": "^5.2.1",
+    "nwb": "0.25.x",
+    "typescript": "^3.9.5"
   },
-  "author": "",
+  "author": "cjquines",
   "license": "MIT",
   "repository": ""
 }
