add initial canvas resizing

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/fabric": "^3.6.7",
     "awesome-typescript-loader": "^5.2.1",
     "nwb": "0.25.x",
+    "nwb-sass": "^0.10.2",
     "typescript": "^3.9.5"
   },
   "author": "cjquines",
