--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "fabric": "^3.6.3",
     "keyboardjs": "^2.6.3",
+    "pdfmake": "^0.1.65",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
