--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "keyboardjs": "^2.6.3",
     "pdfmake": "^0.1.65",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-modal": "^3.11.2"
   },
   "devDependencies": {
     "@types/fabric": "^3.6.7",
