--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "qboard",
   "version": "0.1.0",
-  "description": "The whiteboard app with vim-inspired bindings.",
+  "description": "The efficient digital whiteboard.",
   "scripts": {
     "build": "nwb build-react-app",
     "clean": "nwb clean-app",
