--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,6 @@
     "target": "ESNext",
     "moduleResolution": "Node"
   },
-  "include": ["./src/**/*"]
+  "include": ["./src/**/*"],
+  "exclude": ["./src/lib/historyCopy.ts", "./src/lib/pagesCopy.ts", "./src/lib/qboardCopy.ts"]
 }
