switch to ?. operator
WE'RE IN THE FUTURE BABY

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "esModuleInterop": true,
     "jsx": "react",
-    "target": "ESNext",
+    "target": "ES2018",
     "moduleResolution": "Node"
   },
   "include": [
