--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "nwb": "0.25.x",
     "nwb-sass": "^0.10.2",
+    "prettier": "^2.1.2",
     "typescript": "^4.0.3"
   },
   "files": [
