--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nwb-sass": "^0.10.2",
     "prettier": "^2.1.2",
     "stylelint": "^13.7.2",
+    "stylelint-config-standard": "^20.0.0",
     "typescript": "^4.0.3"
   },
   "files": [
