--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/fabric": "^3.6.8",
     "@types/react": "^16.9.52",
     "@typescript-eslint/parser": "^4.4.1",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
     "awesome-typescript-loader": "^5.2.1",
     "eslint": "^7.11.0",
     "eslint-config-airbnb": "^18.2.0",
