--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "build": "nwb build-react-app",
     "clean": "nwb clean-app",
+    "predeploy": "npm run build",
+    "deploy": "node deploy.js",
     "start": "nwb serve-react-app"
   },
   "dependencies": {
@@ -32,6 +34,7 @@
     "nwb": "0.25.x",
     "nwb-sass": "^0.10.2",
     "prettier": "^2.1.2",
+    "shelljs": "^0.8.4",
     "stylelint": "^13.7.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-scss": "^3.18.0",
