--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,7 +17,7 @@ jobs:
           node-version: 12
 
       - name: Install Node.js dependencies
-        run: npm install
+        run: npm ci
 
       - name: Run linters
         uses: wearerequired/lint-action@v1.6.0
