Add lint as npm scripts

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "build": "nwb build-react-app",
     "clean": "nwb clean-app",
+    "lint": "eslint **/*.{js,ts,jsx,tsx}",
+    "lint:fix": "npm run lint -- --fix",
     "predeploy": "npm run build",
     "deploy": "node deploy.js",
     "start": "nwb serve-react-app"
