--- a/package.json
+++ b/package.json
@@ -41,11 +41,11 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
-    "nwb": "0.25.x",
+    "nwb": "^0.25.2",
     "nwb-sass": "^0.10.2",
     "prettier": "^2.2.1",
     "shelljs": "^0.8.4",
-    "stylelint": "^13.7.2",
+    "stylelint": "^9.3.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-scss": "^3.18.0",
     "typescript": "^4.2.3"
