--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "awesome-typescript-loader": "^5.2.1",
+    "closure-webpack-plugin": "^2.5.0",
     "eslint": "^7.22.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.1.0",
@@ -42,6 +43,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
+    "google-closure-compiler": "^20210601.0.0",
     "nwb": "^0.25.2",
     "nwb-sass": "^0.10.2",
     "prettier": "^2.2.1",
