Write nwb config in typescript
This is compiled down to js in the npm scripts before running any nwb command

This is so that we get type information for the config objects, particularly important for webpack

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 /coverage
+
+# generated from typescript at build time
 /dist
+
+# since this is generated from the typescript file when needed
+nwb.config.js
+
 /node_modules
 npm-debug.log*
+
 deploy.sh
 deploy.js
