--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
-  "name": "qboard",
-  "version": "0.1.1",
-  "description": "The efficient digital whiteboard.",
+	"name": "qboard-vite",
+	"private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "build": "nwb build-react-app",
-    "clean": "nwb clean-app",
-    "lint": "npm run eslint && npm run stylelint",
-    "lint:fix": "npm run eslint:fix && npm run stylelint:fix",
-    "eslint": "eslint src/**/*.{js,ts,jsx,tsx}",
-    "eslint:fix": "npm run eslint -- --fix",
-    "stylelint": "stylelint **/*.{css,sass,scss}",
-    "stylelint:fix": "npm run stylelint -- --fix",
-    "predeploy": "npm run build",
-    "deploy": "node deploy.js",
-    "start": "nwb serve-react-app"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@mehra/ts": "^5.2.0",
+	  "@mehra/ts": "^5.2.0",
     "fabric": "^4.2.0",
     "keyboardjs": "^2.6.4",
     "pdfmake": "^0.1.70",
@@ -27,45 +21,34 @@
     "tex-to-svg": "^0.2.0"
   },
   "devDependencies": {
-    "@types/fabric": "^3.6.8",
+	  "@types/fabric": "^3.6.8",
     "@types/keyboardjs": "^2.5.0",
     "@types/pdfmake": "^0.1.17",
-    "@types/react": "^16.9.52",
-    "@types/react-modal": "^3.10.6",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
-    "awesome-typescript-loader": "^5.2.1",
+    "@types/react": "^18.2.14",
+	  "@types/react-modal": "^3.10.6",
+    "@types/react-dom": "^18.2.6",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
+    "@vitejs/plugin-react": "^4.0.1",
     "eslint": "^7.22.0",
-    "eslint-config-airbnb": "^18.2.1",
+	  "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
-    "nwb": "^0.25.2",
-    "nwb-sass": "^0.10.2",
-    "prettier": "^2.2.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.1",
+    "vite": "^4.4.0",
+	  "sass": "^1.63.6",
+	  "prettier": "^2.2.1",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-scss": "^3.19.0",
     "typescript": "^4.2.3"
-  },
+  }, 
   "files": [
-    "./src/**/*"
+	  "./src/**/*"
   ],
-  "bugs": {
-    "url": "https://github.com/cjquines/qboard/issues"
-  },
-  "author": {
-    "name": "cjquines",
-    "url": "https://cjquines.com"
-  },
-  "contributors": [
-    {
-      "name": "Avi Mehra",
-      "url": "https://pihart.github.io"
-    }
-  ],
-  "license": "MIT",
-  "repository": "github:cjquines/qboard"
+  "author": "Albert Cao"
 }
