--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "build": "vite build",
     "lint": "npm run eslint && npm run stylelint",
     "lint:fix": "npm run eslint:fix && npm run stylelint:fix",
-    "eslint": "eslint src/**/*.{js,ts,jsx,tsx}",
+    "eslint": "eslint 'src/**/*.{ts,tsx}'",
     "eslint:fix": "npm run eslint -- --fix",
-    "stylelint": "stylelint **/*.{css,sass,scss}",
+    "stylelint": "stylelint '**/*.{css,sass,scss}'",
     "stylelint:fix": "npm run stylelint -- --fix",
     "predeploy": "npm run build",
     "deploy": "node deploy.js",
@@ -44,9 +44,9 @@
     "eslint-plugin-react": "^7.22.0",
     "prettier": "^2.2.1",
     "sass": "^1.92.1",
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^22.0.0",
-    "stylelint-scss": "^3.19.0",
+    "stylelint": "^16.24.0",
+    "stylelint-config-standard": "^39.0.0",
+    "stylelint-scss": "^6.12.1",
     "typescript": "^4.2.3",
     "vite": "^6.3.6"
   },
