--- a/package.json
+++ b/package.json
@@ -21,33 +21,30 @@
     "pdfmake": "^0.1.70",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-modal": "^3.11.2",
+    "react-modal": "^3.16.3",
     "react-tooltip": "^4.2.10",
     "tex-to-svg": "^0.2.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.35.0",
     "@types/fabric": "^3.6.8",
     "@types/keyboardjs": "^2.5.0",
     "@types/pdfmake": "^0.1.17",
-    "@types/react": "^16.9.52",
-    "@types/react-modal": "^3.10.6",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
+    "@types/react": "^19.1.13",
+    "@types/react-modal": "^3.16.3",
     "@vitejs/plugin-react": "^4.7.0",
-    "awesome-typescript-loader": "^5.2.1",
-    "eslint": "^7.22.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "prettier": "^2.2.1",
+    "eslint": "^9.35.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
+    "prettier": "3.6.2",
     "sass": "^1.92.1",
     "stylelint": "^16.24.0",
     "stylelint-config-standard": "^39.0.0",
     "stylelint-scss": "^6.12.1",
-    "typescript": "^4.2.3",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.44.0",
     "vite": "^6.3.6"
   },
   "files": [
